--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,10 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Election Informinator</title>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <body style="margin: 0">
+    <noscript>This app allows you to find and compare information on the hottest topics in the Canadian election.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
