MVP frontend complete

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Election Informinator</title>
   </head>
-  <body style="margin: 0">
+  <body style="margin: 0;">
     <noscript>This app allows you to find and compare information on the hottest topics in the Canadian election.</noscript>
     <div id="root"></div>
     <!--
