--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="This app allows you to find and compare information on the hottest topics in the Canadian election!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,10 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Election Informinator</title>
+    <title>PoliViews</title>
   </head>
   <body style="margin: 0;">
-    <noscript>This app allows you to find and compare information on the hottest topics in the Canadian election.</noscript>
+    <noscript>This app allows you to find and compare information on the hottest topics in the Canadian election!</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
